force-app/main/default/objects/UHN_Publication_Author__c/UHN_Publication_Author__c.object-meta.xml
<CustomObject>
    <description>Junction-shaped record linking a publication to an author. The realistic and hardest case for the Verification Framework — multi-author records mean the same publication may have many of these, each individually verifiable by a different PI.</description>
    <label>Publication Author</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Publication Author Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Authors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>