force-app/main/default/objects/UHN_Publication_Author__c/fields/AAR__c.field-meta.xml
<CustomField>
    <fullName>AAR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent AAR Workspace record. Default parent lookup expected by VerificationCardController; can be overridden via Verification_Binding__mdt.</description>
    <label>AAR</label>
    <referenceTo>UHN_AAR__c</referenceTo>
    <relationshipLabel>Publication Authors</relationshipLabel>
    <relationshipName>Publication_Authors</relationshipName>
    <type>Lookup</type>
</CustomField>