force-app/main/default/objects/UHN_Publication_Author__c/fields/Data_Origin__c.field-meta.xml
<CustomField>
    <fullName>Data_Origin__c</fullName>
    <description
  >Indicates which system created this junction record. Used by RecordType assignment automation: Manual → Manual_Entry; any other value → Proposed. Set by source system sync handlers (e.g. ORCID, Wellspring); defaults to Manual for PI-created records.</description>
    <label>Data Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>ORCID</fullName>
            </value>
            <value>
                <fullName>Wellspring</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>