force-app/main/default/objects/UHN_Publication_Author__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Stable identifier from the upstream source system (Wellspring, etc.). Used by the reconciliation service to match incoming source updates to existing records.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>