force-app/main/default/objects/UHN_Publication_Author__c/fields/Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified__c</fullName>
    <description
  >Checkbox mirror of Verification_Status__c. True when status = Verified. Kept in sync by the reconciliation service and the AAR_ScholarlyOutput_VerificationSync trigger pattern.</description>
    <defaultValue>false</defaultValue>
    <label>Is Verified</label>
    <type>Checkbox</type>
</CustomField>