force-app/main/default/objects/UHN_Publication_Author__c/fields/Override_Payload__c.field-meta.xml
<CustomField>
    <fullName>Override_Payload__c</fullName>
    <description>JSON delta of PI corrections. {&quot;Title__c&quot;: &quot;Corrected Title&quot;}. New overrideable fields require zero schema migration — just update the field set the verification card reads. This is the schema trick from the framework deck.</description>
    <label>Override Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>