force-app/main/default/objects/UHN_Publication_Author__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Authorship role (First Author, Co-Author, Senior Author, etc.). Frequently corrected by PI — typical override target.</description>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>