force-app/main/default/objects/UHN_Publication_Author__c/fields/Source_Hash__c.field-meta.xml
<CustomField>
    <fullName>Source_Hash__c</fullName>
    <description>SHA-256 of the last source payload we processed. The reconciliation service compares incoming hashes against this to detect drift cheaply, without having to diff JSON.</description>
    <label>Source Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>