force-app/main/default/objects/UHN_Publication_Author__c/fields/Source_Payload__c.field-meta.xml
<CustomField>
    <fullName>Source_Payload__c</fullName>
    <description>JSON snapshot of the last source projection we processed. Read at display time and merged with Override_Payload__c.</description>
    <label>Source Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>