force-app/main/default/objects/UHN_Publication_Author__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Publication title. Sourced from upstream and overrideable by PI.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>