force-app/main/default/objects/UHN_Publication_Author__c/fields/UHN_Author_Entity__c.field-meta.xml
<CustomField>
    <fullName>UHN_Author_Entity__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  UHN_Contact__r.Account.Id  ,  UHN_Contact__r.Account.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Author Entity</label>
    <type>Text</type>
</CustomField>