force-app/main/default/objects/UHN_Publication_Author__c/fields/UHN_Author_Name__c.field-meta.xml
<CustomField>
    <fullName>UHN_Author_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  UHN_Contact__r.Id ,  UHN_Contact__r.FirstName &amp; &quot; &quot; &amp; UHN_Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Author Name</label>
    <type>Text</type>
</CustomField>