force-app/main/default/objects/UHN_Publication_Author__c/fields/UHN_Checksum_Flag_changes__c.field-meta.xml
<CustomField>
    <fullName>UHN_Checksum_Flag_changes__c</fullName>
    <description>This field is only used during ETL, it allows to only update those contacts where any of the attributes changed. If there&apos;s no change, then ETL will not push the contact into SF.</description>
    <label>Checksum (Flag changes)</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>