force-app/main/default/objects/UHN_Publication_Author__c/fields/UHN_Contact__c.field-meta.xml
<CustomField>
    <fullName>UHN_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Publications</relationshipLabel>
    <relationshipName>Publications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>