force-app/main/default/objects/UHN_Publication_Author__c/fields/UHN_ENID_is_Corresp_Auth__c.field-meta.xml
<CustomField>
    <fullName>UHN_ENID_is_Corresp_Auth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ENID is Corresp Auth</label>
    <type>Checkbox</type>
</CustomField>