force-app/main/default/objects/UHN_Publication_Author__c/fields/UHN_INV_is_First_Author__c.field-meta.xml
<CustomField>
    <fullName>UHN_INV_is_First_Author__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Author</label>
    <type>Checkbox</type>
</CustomField>