force-app/main/default/objects/UHN_Publication_Author__c/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <description>Timestamp of the most recent PI attestation.</description>
    <label>Verified At</label>
    <type>DateTime</type>
</CustomField>