force-app/main/default/objects/UHN_Publication_Author__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who most recently attested to this record.</description>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verified Publication Authors</relationshipLabel>
    <relationshipName>Verified_Publication_Authors</relationshipName>
    <type>Lookup</type>
</CustomField>