force-app/main/default/objects/UHN_Publication_Author__c/recordTypes/Manual_Entry.recordType-meta.xml
<RecordType>
    <fullName>Manual_Entry</fullName>
    <active>true</active>
    <description
  >PI manually added this publication authorship with no source system match. No source fields present on layout. Fully editable. Default record type for PI-created records (Data_Origin__c = Manual).</description>
    <label>Manual Entry</label>
</RecordType>