force-app/main/default/objects/UHN_Publication_Author__c/recordTypes/Proposed.recordType-meta.xml
<RecordType>
    <fullName>Proposed</fullName>
    <active>true</active>
    <description
  >Publication authorship suggested by an integration (e.g. ORCID). Source fields are read-only. PI must verify or reject via the BH-1249 Screen Flow launched from the Proposed page layout. Transitions to Verified via Flow.</description>
    <label>Proposed</label>
</RecordType>