force-app/main/default/objects/UHN_Publication_Author__c/recordTypes/Verified.recordType-meta.xml
<RecordType>
    <fullName>Verified</fullName>
    <active>true</active>
    <description
  >PI-confirmed authorship. Source fields locked. PI can augment fields. Audit stamps (Verified_By__c, Verified_At__c) set on transition from Proposed via BH-1249 Flow. Terminal state.</description>
    <label>Verified</label>
</RecordType>